--- a/themes/experience-engine/assets/styles/base/typography.css
+++ b/themes/experience-engine/assets/styles/base/typography.css
@@ -57,7 +57,7 @@ h2 {
 	line-height: 1.353;
 
 	@media (--min-medium-viewport) {
-		font-size: 1.8889rem;
+		font-size: 1.889rem;
 	}
 }
 
@@ -67,8 +67,12 @@ h3 {
 }
 
 h4 {
-	font-size: 1.2222222rem;
+	font-size: .889rem;
 	line-height: 1.3636;
+
+	@media (--min-medium-viewport) {
+		font-size: 1.2222222rem;
+	}
 }
 
 h5 {
