Add new partials to controller.

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -33,6 +33,8 @@
 @import 'components/show/show-navigation';
 @import 'components/show/show-tile';
 
+@import 'components/share/share';
+
 @import 'components/contest/contest-tile';
 
 @import 'components/podcast/podcast-tile';
