Extracted social share styles to make sure it works properly everywhere

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -52,5 +52,6 @@
 @import 'components/lazy-image';
 @import 'components/videojs';
 @import 'components/load-more-button';
+@import 'components/social-share';
 
 @import 'utilities/display';
