--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -47,7 +47,7 @@
 @import 'components/nprogress';
 @import 'components/modal';
 @import 'components/loading';
-@import 'components/lazy-image';
+@import 'components/lazyload';
 @import 'components/videojs';
 @import 'components/load-more-button';
 
