Moved back social share css

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -32,6 +32,8 @@
 @import 'components/show/show-navigation';
 @import 'components/show/show-tile';
 
+@import 'components/share/share';
+
 @import 'components/gallery/listicle';
 
 @import 'components/contest/contest-tile';
@@ -51,6 +53,5 @@
 @import 'components/lazy-image';
 @import 'components/videojs';
 @import 'components/load-more-button';
-@import 'components/social-share';
 
 @import 'utilities/display';
