Implemented basic countdown component

--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -47,6 +47,7 @@
 		width: 400px;
 	}
 
+	& .countdown,
 	& .cta {
 		background-position: center;
 		background-repeat: no-repeat;
@@ -55,6 +56,7 @@
 		position: relative;
 	}
 
+	& .countdown-content,
 	& .cta-content {
 		left: 50%;
 		position: absolute;
@@ -63,6 +65,7 @@
 		transform: translate(-50%, -50%);
 	}
 
+	& .countdown-title,
 	& .cta-title {
 		font-size: 2rem;
 	}
@@ -70,5 +73,38 @@
 	& .cta-button {
 		display: inline-block;
 		padding: .5rem 1rem;
+	}
+
+	& .countdown-timer {
+		display: flex;
+		justify-content: center;
+
+		& .time {
+			background-color: var(--global-mine-shaft);
+			color: var(--global-white);
+			display: block;
+			font-size: 3rem;
+			font-family: monospace;
+			font-weight: 700;
+			padding: .25rem 0;
+
+			&::after {
+				content: ':';
+				margin: 0 .25rem;
+			}
+
+			&:first-child {
+				padding-left: .5rem;
+			}
+
+			&:last-child {
+				padding-right: .5rem;
+
+				&::after {
+					content: '';
+					margin: 0;
+				}
+			}
+		}
 	}
 }
