Added sponsor ad unit to the countdown component

--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -78,6 +78,7 @@
 	& .countdown-timer {
 		display: flex;
 		justify-content: center;
+		margin-bottom: 2rem;
 
 		& .time {
 			background-color: var(--global-mine-shaft);
