Add styles for inline download button within single episode title.

--- a/themes/experience-engine/assets/styles/components/episode/episode-info.css
+++ b/themes/experience-engine/assets/styles/components/episode/episode-info.css
@@ -95,6 +95,19 @@
 			@media (--min-small-viewport) {
 				padding-left: 2.78rem;
 			}
+
+			& span {
+				display: inline;
+			}
+
+			& .btn {
+				display: inline-block;
+				margin-left: 1rem;
+
+				@media (--min-medium-viewport) {
+					transform: translateY(-7px); /* Visually centers the button in text */
+				}
+			}
 		}
 	}
 
