--- a/themes/experience-engine/assets/styles/components/episode/episode-tile.css
+++ b/themes/experience-engine/assets/styles/components/episode/episode-tile.css
@@ -3,7 +3,9 @@
 	display: flex;
 	padding-bottom: 2.22rem;
 
-	&:hover {
+	&:hover,
+	&:focus,
+	&:focus-within {
 		& .meta [class*="share"] {
 			@media (--min-medium-viewport) {
 				display: inline-flex;
@@ -48,6 +50,7 @@
 		}
 
 		& .duration {
+			font-family: var(--global-font-family-secondary);
 			font-size: .833rem;
 			font-weight: 600;
 
@@ -65,6 +68,7 @@
 		& .download {
 			color: var(--brand-primary);
 			display: inline;
+			font-family: var(--global-font-family-secondary);
 			font-size: .778rem;
 			padding-left: 1.278rem;
 		}
