--- a/themes/experience-engine/assets/styles/components/podcast/podcast-tile.css
+++ b/themes/experience-engine/assets/styles/components/podcast/podcast-tile.css
@@ -87,9 +87,10 @@
 	& .latest,
 	& .count {
 		display: inline;
+		font-family: var(--global-font-family-secondary);
 		font-size: .833rem;
 		font-weight: 600;
-		margin-bottom: 0;
+		margin: 0;
 	}
 
 	& .latest {
@@ -98,7 +99,6 @@
 
 	& .count {
 		color: var(--global-font-secondary);
-		font-family: var(--global-font-family-secondary);
 		font-weight: 600;
 		text-transform: uppercase;
 		padding-left: 1.389rem;
