Ensure latest color utilizes brand secondary color.

--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -199,10 +199,10 @@
 
 .single-podcast {
 	& #inner-content {
-		&  > .podcast {
+		& > .podcast {
 			& .episode-tile:first-child {
 				& .episode-meta::before {
-					color: #5fa5d8;
+					color: var(--brand-secondary);
 					content: "Latest";
 					font-style: italic;
 					font-size: .833rem;
