--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -21,6 +21,8 @@
 @import 'components/archive/archive-post-tile';
 @import 'components/archive/tile-episode';
 
+@import 'components/search/search-header';
+
 @import 'components/player/ads';
 @import 'components/player/controls';
 @import 'components/player/live-player';
