Updated lazy images to use intersection observer

--- a/themes/experience-engine/assets/styles/base/post-thumbnail.css
+++ b/themes/experience-engine/assets/styles/base/post-thumbnail.css
@@ -9,12 +9,13 @@
 	}
 
 	& a,
+	& .placeholder-lazyimage,
 	& .lazy-image {
-		bottom: 0;
 		display: block;
+		height: 100%;
 		left: 0;
 		position: absolute;
-		right: 0;
 		top: 0;
+		width: 100%;
 	}
 }
