--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -64,31 +64,7 @@
 	}
 
 	&.-carousel {
-		align-items: flex-start;
-		display: flex;
-		left: 0;
-		overflow: auto;
-		padding-right: 4rem;
-		position: relative;
-		right: -1rem;
-		width: calc(100% + 1rem);
-
-		@media (min-width: 1373px) {
-			width: calc(100% + 4rem);
-			right: -4rem;
-		}
-
-		& > div {
-			flex: 1 0 calc(50% - 1.5rem);
-			margin-right: 1.5rem;
-			max-width: calc(50% - 1.5rem);
-			padding-bottom: 0;
-
-			@media (--min-large-viewport) {
-				flex: 0 1 calc(25% - 1.5rem);
-				max-width: calc(25% - 1.5rem);
-			}
-		}
+		max-width: calc(100% + 1rem);
 	}
 
 	&.-small,
@@ -108,7 +84,7 @@
 		}
 	}
 
-	&.-small {
+	&.-small:not(.-carousel) {
 		& > div {
 			@media (--min-small-viewport) {
 				flex: 1 0 calc(50% - 1.5rem);
@@ -142,28 +118,9 @@
 				}
 			}
 		}
-
-		&.-carousel {
-			& > div {
-				flex: 1 0 calc(100% - 1.5rem);
-				margin-right: 1.5rem;
-				max-width: calc(100% - 1.5rem);
-
-				@media (--min-small-viewport) {
-					flex: 1 0 calc(50% - 1.5rem);
-					margin-right: 2rem;
-					max-width: calc(50% - 1.5rem);
-				}
-
-				@media (--min-large-viewport) {
-					flex: 1 0 calc(25% - 1.5rem);
-					max-width: calc(25% - 1.5rem);
-				}
-			}
-		}
 	}
 
-	&.-large {
+	&.-large:not(.-carousel) {
 		justify-content: space-between;
 
 		& > div {
@@ -250,4 +207,10 @@
 			}
 		}
 	}
+}
+
+
+.swiper-container {
+	width: 100%;
+	height: 100%;
 }
