Offline status styling

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -29,6 +29,7 @@
 @import 'components/player/ads';
 @import 'components/player/controls';
 @import 'components/player/live-player';
+@import 'components/player/offline';
 
 @import 'components/front-page';
 
