--- a/themes/experience-engine/assets/styles/components/navigation/user-nav.css
+++ b/themes/experience-engine/assets/styles/components/navigation/user-nav.css
@@ -1,5 +1,5 @@
 .user-nav {
-    background: var(--global-mercury);
+    background-color: var(--global-theme-secondary);
     border-top: 1px solid #E8E8E8;
     display: flex;
     justify-content: space-between;
@@ -8,7 +8,7 @@
     max-width: 190px;
     padding: 1.1rem;
     position: fixed;
-    top: calc(100% - 176px);
+    bottom: 74px;
     z-index: 10;
 
     & .user-nav-image {
