--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -152,7 +152,6 @@
 
 	@media screen and (min-height: 680px) and (min-width: 831px) {
 		position: fixed;
-		top: 32px;
 	}
 
 	& .primary-sidebar-inside {
@@ -160,4 +159,12 @@
 		height: 100%;
 		z-index: 2;
 	}
+}
+
+body.admin-bar {
+    & .primary-sidebar {
+        @media screen and (min-height: 680px) and (min-width: 831px) {
+            top: 32px;
+        }
+    }
 }
