Added back-to-top button

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -60,5 +60,6 @@
 @import 'components/lazyload';
 @import 'components/videojs';
 @import 'components/load-more-button';
+@import 'components/back-to-top';
 
 @import 'utilities/display';
