--- a/themes/experience-engine/assets/styles/components/modal.css
+++ b/themes/experience-engine/assets/styles/components/modal.css
@@ -24,7 +24,7 @@
 		&:hover,
 		&:focus {
 			outline: 0;
-			opacity: 0.9;
+			opacity: 0.7;
 		} 
 		
 	}
@@ -80,10 +80,23 @@
 		}
 	}
 
+	& .modal-alert {
+		margin-bottom: 1rem;
+
+		& b {
+			color: var(--global-alert);
+		}
+	}
+
 	& .modal-close {
 		position: absolute;
 		right: 2rem;
 		width: auto;
+
+		&:hover,
+		&:focus {
+			opacity: 0.7;
+		}
 	}
 
 	& .modal-content {
