--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -3,6 +3,7 @@
 	background-color: var(--global-theme-secondary);
 	box-shadow: 1px 0 3px rgba(0, 0, 0, 0.08);
 	display: flex;
+	overflow: auto;
 	padding: .75rem 1.1rem;
 
 	@media (--min-medium-viewport) {
@@ -140,31 +141,4 @@
 			}
 		}
 	}
-}
-
-.primary-sidebar {
-	background-color: var(--global-theme-secondary);
-	height: 100%;
-	max-width: 190px;
-	padding: 2.1rem 1.1rem;
-	min-height: 100vh;
-	position: relative;
-
-	@media screen and (min-height: 680px) and (min-width: 831px) {
-		position: fixed;
-	}
-
-	& .primary-sidebar-inside {
-		position: relative;
-		height: 100%;
-		z-index: 2;
-	}
-}
-
-body.admin-bar {
-    & .primary-sidebar {
-        @media screen and (min-height: 680px) and (min-width: 831px) {
-            top: 32px;
-        }
-    }
 }
