Refactored single posts

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -38,6 +38,8 @@
 @import 'components/show/show-navigation';
 @import 'components/show/show-tile';
 
+@import 'components/single/posts';
+
 @import 'components/share/share';
 
 @import 'components/gallery/listicle';
