--- a/themes/experience-engine/assets/styles/components/discover/discover-modal.css
+++ b/themes/experience-engine/assets/styles/components/discover/discover-modal.css
@@ -1,15 +1,11 @@
-.modal.discover-modal {
-	background-color: transparent;
-
-	& .modal-content {
-		height: calc(100% - 84px);
-		left: 190px;
-		max-width: none;
-		padding-top: 0;
-		top: 0;
-		transform: translate(0);
-		width: calc(100% - 190px);
-	}
+.discover-modal {
+	background-color: var(--global-white);
+	left: 0;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 80;
 
 	& .modal-header {
 		font-style: italic;
@@ -24,7 +20,7 @@
 		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08), 0px 1px 0px rgba(0, 0, 0, 0.1),
 			inset 0px 1px 2px rgba(255, 255, 255, 0.08);
 		display: flex;
-		margin: 0 -2rem 2.945rem;
+		margin: -3.333rem 0 2.945rem;
 		padding: 1.778rem 2rem;
 
 		& .select {
