--- a/themes/experience-engine/assets/styles/components/discover/discover-modal.css
+++ b/themes/experience-engine/assets/styles/components/discover/discover-modal.css
@@ -2,6 +2,7 @@
 	background-color: var(--global-white);
 	left: 0;
 	height: 100%;
+	margin-top: -3.333rem;
 	position: absolute;
 	top: 0;
 	width: 100%;
@@ -9,6 +10,10 @@
 
 	& .modal-header {
 		font-style: italic;
+	}
+
+	& .modal-close {
+		top: 1.778rem;
 	}
 
 	& .search-field {
@@ -20,7 +25,7 @@
 		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08), 0px 1px 0px rgba(0, 0, 0, 0.1),
 			inset 0px 1px 2px rgba(255, 255, 255, 0.08);
 		display: flex;
-		margin: -3.333rem 0 2.945rem;
+		margin: 0 0 2.945rem;
 		padding: 1.778rem 2rem;
 
 		& .select {
