--- a/themes/experience-engine/assets/styles/components/player/live-player.css
+++ b/themes/experience-engine/assets/styles/components/player/live-player.css
@@ -29,8 +29,32 @@ iframe[src^="https://omny.fm"] {
 }
 
 .live-player-modal {
-	position: absolute;
-	right: 0;
-	width: auto;
-	max-width: 100%;
+	background: var(--global-theme-secondary);
+	bottom: 18%;
+	box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.2), 
+				inset 0px 2px 0px rgba(255, 255, 255, 0.25);
+	position: fixed;
+	right: 1%;
+	width: 299px;
+	z-index: 100;
+	padding: 2rem;
+
+	& p {
+		margin-bottom: 1rem;
+	}
+
+	& a {
+		color: var(--global-theme-font-primary);
+		font-weight: 600;
+	}
+
+	& img {
+		max-width: 50%;
+		height: auto;
+	}
+
+	& address {
+		font-style: normal;
+		margin-bottom: 0;
+	}
 }
