Updated styles to live player

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -30,6 +30,7 @@
 @import 'components/player/controls';
 @import 'components/player/live-player';
 @import 'components/player/offline';
+@import 'components/player/range-slider';
 
 @import 'components/front-page';
 
