--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -12,10 +12,33 @@
 	& .control-section {
 		align-items: center;
 		display: flex;
-		width: 100%;
+
+		@media(--min-medium-viewport) {
+			width: 100%;
+		}
 
 		&:first-child {
 			padding-left: 1rem;
+			overflow: hidden;
+			@media(--max-medium-viewport) {
+				order: 2;
+				width: 100%;
+			}
+		}
+
+		&:nth-child(2) {
+			@media(--max-medium-viewport) {
+				padding-left: 1rem;
+				order: 1;
+			}
+		}
+
+		&:last-child {
+			@media(--max-medium-viewport) {
+				order: 3;
+				width: 100%;
+				max-width: 50px;
+			}
 		}
 
 		& button:not(.play-btn, .pause-btn, .resume-btn, .loading-btn) {
@@ -28,14 +51,16 @@
 		}
 
 		&.-centered {
-			justify-content: center;
+			@media(--min-medium-viewport) {
+				justify-content: center;
+			}
 		}
 	}
 
 	& .controls-info {
 		width: 100%;
 		font-size: 1rem;
-		color: #3C4043;
+		color: var(--global-theme-font-primary);
 
 		& strong {
 			font-weight: 600;
@@ -57,6 +82,7 @@
 			display: flex;
 			align-items: center;
 			margin-bottom: 0;
+			white-space: nowrap;
 		}
 	}
 
@@ -68,16 +94,25 @@
 	}
 
 	& .controls-sponsor {
-		display: block !important;
+		display: none;
+
+		@media(--min-medium-viewport) {
+			display: block !important;
+		}
 	}
 
 	& .controls-recent {
 
 		& button {
-			display: flex;
+			display: none;
+
+			@media(--min-medium-viewport) {
+				display: flex;
+			}
 
 			& svg rect {
 				transition: fill 300ms ease-in-out;
+				fill: var(--global-theme-font-primary);
 			}
 
 			&:hover {
@@ -96,6 +131,23 @@
 		display: flex;
 		height: 22px;
 		position: relative;
+
+		& button {
+			display: none;
+
+			@media(--min-medium-viewport) {
+				display: block;
+			}
+			
+			& svg path[fill] {
+				fill: var(--global-theme-font-primary);
+			}
+
+			& svg path[stroke] {
+				stroke: var(--global-theme-font-primary);
+			}
+
+		}
 
 		& button:hover {
 			& svg path {
@@ -120,8 +172,10 @@
 			opacity: 0;
 			position: absolute;
 			left: 3rem;
+			top: -0.5rem;
 			transition: visibility 250ms ease-in-out,
 						opacity 250ms ease-in-out;
+			width: 82px;
 
 			&.-volume-visible {
 				visibility: visible;
@@ -136,9 +190,15 @@
 		height: 100%;
 		position: relative;
 
+		display: none;
+
+		@media(--min-medium-viewport) {
+			display: block;
+		}
+
 		& button {
 			background: transparent;
-			color: #737373;
+			color: var(--global-theme-font-primary);
 			font-weight: 600;
 			text-transform: uppercase;
 			font-size: 1rem;
@@ -174,7 +234,10 @@
 		border: 2px solid var(--brand-primary);
 		border-radius: 50%;
 		padding: 0;
-		margin: 0 2rem;
+		
+		@media(--min-medium-viewport) {
+			margin: 0 2rem;
+		}
 	}
 
 	& svg {
