--- a/themes/experience-engine/assets/styles/components/player/range-slider.css
+++ b/themes/experience-engine/assets/styles/components/player/range-slider.css
@@ -1,85 +1,83 @@
-input[type=range] {
-  -webkit-appearance: none;
-  width: 100%;
-  margin: 4.5px 0;
-}
-input[type=range]:focus {
-  outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  background: var(--brand-primary);
-  border-radius: 0px;
-  border: 0px solid rgba(0, 0, 0, 0);
-}
-input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 0px solid #000000;
-  height: 11px;
-  width: 11px;
-  border-radius: 50px;
-  background: var(--brand-primary);
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -4.5px;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: var(--brand-primary);
-}
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  background: var(--brand-primary);
-  border-radius: 0px;
-  border: 0px solid rgba(0, 0, 0, 0);
-}
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 0px solid #000000;
-  height: 11px;
-  width: 11px;
-  border-radius: 50px;
-  background: var(--brand-primary);
-  cursor: pointer;
-}
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: var(--brand-primary);
-  border: 0px solid rgba(0, 0, 0, 0);
-  border-radius: 0px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-}
-input[type=range]::-ms-fill-upper {
-  background: var(--brand-primary);
-  border: 0px solid rgba(0, 0, 0, 0);
-  border-radius: 0px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-}
-input[type=range]::-ms-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 0px solid #000000;
-  height: 11px;
-  width: 11px;
-  border-radius: 50px;
-  background: var(--brand-primary);
-  cursor: pointer;
-  height: 2px;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: var(--brand-primary);
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: var(--brand-primary);
+.controls-volume {
+
+  & input[type=range] {
+    -webkit-appearance: none;
+    margin: 4.5px 0;
+    width: 100%;
+
+    &:focus {
+      outline: none;
+    }
+
+    &::-webkit-slider-runnable-track {
+      background: var(--brand-primary);
+      cursor: pointer;
+      width: 100%;
+      height: 2px;
+    }
+
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      background: var(--brand-primary);
+      border-radius: 50px;
+      cursor: pointer;
+      height: 11px;
+      margin-top: -4.5px;
+      width: 11px;
+    }
+
+    &:focus::-webkit-slider-runnable-track {
+      background: var(--brand-primary);
+    }
+
+    &::-moz-range-track {
+      background: var(--brand-primary);
+      cursor: pointer;
+      height: 2px;
+      width: 100%;
+    }
+
+    &::-moz-range-thumb {
+      background: var(--brand-primary);
+      border-radius: 50px;
+      cursor: pointer;
+      height: 11px;
+      width: 11px;
+    }
+
+    &::-ms-track {
+      background: transparent;
+      border-color: transparent;
+      color: transparent;
+      cursor: pointer;
+      height: 2px;
+      width: 100%;
+    }
+
+    &::-ms-fill-lower {
+      background: var(--brand-primary);
+    }
+
+    &::-ms-fill-upper {
+      background: var(--brand-primary);
+    }
+
+    &::-ms-thumb {
+      cursor: pointer;
+      background: var(--brand-primary);
+      border-radius: 50px;
+      height: 11px;
+      height: 2px; /* Fix for MS */
+      width: 11px;
+    }
+
+    &:focus::-ms-fill-lower {
+      background: var(--brand-primary);
+    }
+
+    &:focus::-ms-fill-upper {
+      background: var(--brand-primary);
+    }
+
+  }
 }
