Updated color for foxsports theme

--- a/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: #531f23 !important;
 
-  background-image: url("../../images/WMTR-Header-Desktop2.jpg") !important;
+  //background-image: url("../../images/WMTR-Header-Desktop2.jpg") !important;
 
   background-repeat: repeat-x;
   background-position: center top;
