--- a/themes/foxsports/assets/css/sass/light-theme/base/_variables.scss
+++ b/themes/foxsports/assets/css/sass/light-theme/base/_variables.scss
@@ -10,7 +10,7 @@ $asset_root: "../../../../themes/greatermedia/assets/";
 //
 $black: #000000;
 $white: #ffffff;
-$cardinal: #d22228;
+$cardinal: #002f54;
 $heath: #561015;
 $coffee-bean: #270e10;
 $extra-light-gray: #f1f1f3;
