--- a/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
@@ -10,13 +10,14 @@
 
 .header__main {
     border-top: none;
-    background-color: rgba(0, 0, 0, .3) !important;
+    background-color: $white !important;
 }
 
 /* Navigation */
 
-.header__account ul li a:active, .header__account ul li a:focus, .header__account ul li a:hover, .header__account ul li:hover, .header__nav ul li a:active, .header__nav ul li a:focus, .header__nav ul li.active, .header__nav ul li.active a:hover, .ui-menu .ui-state-focus {background-color: #531f23;}        
+.header__account ul li a:active, .header__account ul li a:focus, .header__account ul li a:hover, .header__account ul li:hover, .header__nav ul li a:active, .header__nav ul li a:focus, .header__nav ul li.active, .header__nav ul li.active a:hover, .ui-menu .ui-state-focus {background-color: #531f23;}
 .header__account--links.sub-menu, .header__nav .format-fi > ul, .header__nav .format-fi > ul.header__account--links, .header__nav .format-fw > ul, .header__nav .format-fw > ul.header__account--links, .header__nav .format-sp > ul, .header__nav .format-sp > ul.header__account--links, .header__nav .sub-menu, .ui-menu {
+  background-color: #015d88;
   border-top: 7px solid #531f23;
   color: #fff;
   min-width: 300px;
@@ -26,27 +27,30 @@
 
 .header__nav .sub-menu, .header__nav .format-fw > ul, .header__nav .format-sp > ul, .header__nav .format-fi > ul, .ui-menu {
     position: absolute;
-    background-color: #270e10;
+    background-color: #015d88;
     color: #000;
     min-width: 300px;
     z-index: 5000100;
 }
 
 
-.header__main ul li a:hover, .header__main ul li:hover a, .header__main ul li a:active {
-    background-color: #270e10;
+.header__main ul li a:hover, .header__main ul li:hover a, .header__main ul li a:active, .header__main ul li a:focus {
+    background-color: #015d88 !important;
     color: #fff;
 }
 
 .header__nav .sub-menu a.active, .header__nav .format-fw > ul a.active, .header__nav .format-sp > ul a.active, .header__nav .format-fi > ul a.active, .header__nav .sub-menu a:focus, .header__nav .format-fw > ul a:focus, .header__nav .format-sp > ul a:focus, .header__nav .format-fi > ul a:focus, .header__nav .sub-menu a:hover, .header__nav .format-fw > ul a:hover, .header__nav .format-sp > ul a:hover, .header__nav .format-fi > ul a:hover, .ui-menu a.active, .ui-menu a:focus, .ui-menu a:hover {
-    color: #fff;
+    background-color: $white !important;
+    color: $black;
 }
 
 .format-sp a:hover .meta-text {
     color: #fff;
 }
 
-.header__main a, .header__main a:active, .header__main a:hover, .header__main a:visited {color: #fff;}
+.header__main a { color: $black; }
+
+.header__main a:active, .header__main a:hover, .header__main a:visited {color: #fff;}
 
 .header__nav li {
   font-weight: 600;
@@ -71,7 +75,7 @@
 }
 
 .header__nav .sub-menu a, .header__nav .format-fw > ul a, .header__nav .format-sp > ul a, .header__nav .format-fi > ul a, .ui-menu a {
-    color: #ffffff;
+    color: $white;
     font-size: 0.7901234568em;
     font-weight: bold;
     text-transform: none;
@@ -83,7 +87,7 @@
 }
 
 .mobile-nav__toggle--span, .mobile-nav__toggle--span::before, .mobile-nav__toggle--span::after {
-    background: #ccc;   
+    background: #ccc;
 }
 
 .mobile-nav__list a {
@@ -110,30 +114,20 @@
     font-size: 1.423828125em;
     margin: 0 0 0 1em;
 }
-    
-/* Header search color */      
+
+/* Header search color */
  .header__search {
-  color: #f0f0f0;
+  color: $black;
   font-weight: bold}
 
 .header__search--btn:before {
-    color: #f0f0f0;
+    color: $light-gray;
     font-size: 1em;
     content: "\e612";
 }
 
-.header__main .header__search:hover {
-    background-color: #531f23;
-    color: #fff;
-    padding-left: 8px;
-} 
-
-.header__search:hover, .header__search:hover .header__search--btn::before {
-    color: #fff;
-}
-
-.mobile-nav__toggle--span, .mobile-nav__toggle--span::before, .mobile-nav__toggle--span::after {
-    background: #ccc;   
+.header__search:hover .header__search--btn::before {
+    color: #015d88;
 }
 
 /* Home page feature items */
@@ -164,7 +158,7 @@
 .home__featured .featured__content--meta {
     width: 65%;
     min-height: 4.2em;
-} 
+}
 
 .featured__content--block:hover .featured__content--title {
     color: #fff;
