Updated navbar items color

--- a/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
@@ -50,7 +50,7 @@
 
 .header__main a { color: $black; }
 
-.header__main a:active, .header__main a:hover, .header__main a:visited {color: #fff;}
+.header__main a:active, .header__main a:hover {color: #fff;}
 
 .header__nav li {
   font-weight: 600;
