Add new image and change background color to match.

--- a/themes/koas/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/koas/assets/css/sass/light-theme/base/_overrides.scss
@@ -18,6 +18,6 @@ a:hover .highlights__community--title {
 		background-image: url("../../images/koas-wallpaper-2019.jpg");
 		background-position: top center;
 		background-repeat: no-repeat;
-		background-color: #14001b;
+		background-color: #000000;
 	}
 }
