Updated background color to black

--- a/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/foxsports/assets/css/sass/light-theme/base/_overrides.scss
@@ -222,5 +222,6 @@ a:hover .highlights__community--title {color:#eaba1a;}
 		background-image: url("../../images/FOX_Takeover-Skin.jpg");
 		background-repeat: no-repeat;
 		background-position: top center;
+		background-color: $black;
 	}
 }
