--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -288,6 +288,7 @@
 .STATION_NOT_FOUND .play-btn {
 	align-items: center;
 	background-color: var(--brand-primary);
+	border: 1px solid var(--global-white);
 	cursor: pointer;
 	display: flex;
 	height: 64px;
