Added styles to countdown block

--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -14,39 +14,22 @@
 		padding: 2.222rem 1rem;
 	}
 
-	& .placeholder-cta {
+	& .placeholder-cta,
+	& .placeholder-countdown {
 		padding-bottom: 2.222rem;
 	}
 
-	& .cta {
+	& .cta,
+	& .countdown {
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		border-radius: 5px;
 	}
 
-	& .cta-content {
-		text-align: center;
-	}
-
-	& .countdown {
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: contain;
-		padding-top: calc((9 / 25) * 100%);
-		position: relative;
-	}
-
+	& .cta-content,
 	& .countdown-content {
-		left: 50%;
-		position: absolute;
 		text-align: center;
-		top: 50%;
-		transform: translate(-50%, -50%);
-	}
-
-	& .countdown-title {
-		font-size: 2rem;
 	}
 
 	& .cta-button {
@@ -59,7 +42,7 @@
 		margin-bottom: 2rem;
 
 		& .time {
-			background-color: var(--global-mine-shaft);
+			background-color: var(--brand-primary);
 			color: var(--global-white);
 			display: block;
 			font-size: 3rem;
@@ -73,10 +56,12 @@
 			}
 
 			&:first-child {
+				border-radius: 5px 0 0 5px;
 				padding-left: .5rem;
 			}
 
 			&:last-child {
+				border-radius: 0 5px 5px 0;
 				padding-right: .5rem;
 
 				&::after {
