Updated navigation on mobile to be more accurate

--- a/themes/experience-engine/assets/styles/components/show/show-navigation.css
+++ b/themes/experience-engine/assets/styles/components/show/show-navigation.css
@@ -60,7 +60,7 @@
 
 				&::after {
 					background-color: var(--brand-primary);
-					bottom: -0.4rem;
+					bottom: 5px;
 					content: "";
 					height: 2px;
 					left: 0;
