Updated search input border bottom based on theme

--- a/themes/experience-engine/assets/styles/components/navigation/search-form.css
+++ b/themes/experience-engine/assets/styles/components/navigation/search-form.css
@@ -32,3 +32,19 @@
 		width: 14px;
 	}
 }
+
+.-dark {
+	& .search-form {
+		& input[type="search"] {
+			border-bottom: 1px solid var(--global-dove-gray);
+		}
+	}
+}
+
+.-light {
+	& .search-form {
+		& input[type="search"] {
+			border-bottom: 1px solid var(--global-mercury);
+		}
+	}
+}
