--- a/themes/experience-engine/assets/styles/components/modal.css
+++ b/themes/experience-engine/assets/styles/components/modal.css
@@ -106,7 +106,9 @@
 	& .modal-content {
 		background-color: var(--global-white);
 		left: 50%;
+		max-height: calc(100% - 2.5rem);
 		max-width: 700px;
+		overflow: auto;
 		padding: 2rem;
 		position: absolute;
 		transform: translate(-50%, -50%);
@@ -114,6 +116,7 @@
 		width: calc(100% - 2.5rem);
 
 		@media(--min-medium-viewport) {
+			height: auto;
 			width: 100%;
 		}
 
@@ -165,7 +168,11 @@
 	}
 
 	& .modal-form-actions {
-		margin: 1rem 0 2rem 0;
+		margin: 1rem 0;
+
+		@media(--min-medium-viewport) {
+			margin: 1rem 0 2rem 0;
+		}
 	}
 
 	& .-sign-in,
