Added image attribution to featured images

--- a/themes/experience-engine/assets/styles/base/post-thumbnail.css
+++ b/themes/experience-engine/assets/styles/base/post-thumbnail.css
@@ -8,6 +8,12 @@
 		width: 100%;
 	}
 
+	&.featured-media {
+		& .lazy-image-attribution {
+			display: block;
+		}
+	}
+
 	& a,
 	& .placeholder-lazyimage,
 	& .lazy-image {
