Updated font colour

--- a/themes/experience-engine/assets/styles/components/single/single-content.css
+++ b/themes/experience-engine/assets/styles/components/single/single-content.css
@@ -79,7 +79,7 @@
     margin-bottom: 3rem;
 
     & .post-tag-label {
-        color: var(--global-theme-primary);
+        color: var(--global-theme-font-primary);
         font-weight: 600;
         font-size: 1rem;
         flex: 0 1 auto;
