Fixed focus and hover state on play button

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -295,6 +295,12 @@
 	justify-content: center;
 	width: 64px;
 
+	&:focus,
+	&:hover {
+		outline: 0;
+		opacity: 0.8;
+	}
+
 	& svg {
 		fill: var(--brand-tertiary);
 		max-height: 31px;
