--- a/themes/experience-engine/assets/styles/components/archive/archive-post-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-post-tile.css
@@ -1,6 +1,7 @@
 .podcast-tile,
 .show-tile,
-.contest-tile {
+.contest-tile,
+.event-tile {
 	align-items: center;
 	display: flex;
 	flex-wrap: wrap;
