--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -59,6 +59,7 @@
 @import 'components/episode/episode-info';
 @import 'components/episode/episode-tile';
 
+@import "components/events/event-tile.css";
 @import 'components/events/event';
 
 @import "components/ads/ad-title";
