Updated breaking news

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -76,5 +76,6 @@
 @import "components/back-to-top";
 @import "components/favorites";
 @import "components/formats/post-format";
+@import "components/breaking-news";
 
 @import "utilities/display";
